Update and rename 2016-05-16-rozhovor-lidr-frantisek-kopriva.md to 2016-07-23-test.md

--- a/_posts/2016-07-23-test.md
+++ b/_posts/2016-07-23-test.md
@@ -3,8 +3,8 @@ layout: post
 category: blog
 tags: test
 title: "Vzorový testovací příspěvěk"
-image: lukas-kolarik.jpg
-author: lukas-kolarik
+image: lukas-kolarik.JPG
+author: Lukáš Kolářík
 date: 2016-05-16
 ---
 
